# mc_dingo

./: .gitignore  CMakeLists.txt  README.md
convex/dingo/: chassis_link-ch.txt
rsdf/dingo/: base_link.rsdf
src/: CMakeLists.txt  config.in.h  dingo.cpp  dingo.h  dingo.in.cpp
tests/: CMakeLists.txt
