if(TARGET dingo)
  set(ROBOT_MODULE_PARAMS "\"dingo\"")
  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/loader.in.cpp" "${CMAKE_CURRENT_BINARY_DIR}/mc_dingo/loader.cpp")
  add_executable(loader_dingo "${CMAKE_CURRENT_BINARY_DIR}/mc_dingo/loader.cpp")
  target_link_libraries(loader_dingo PUBLIC mc_rtc::mc_rbdyn)
  add_test(NAME loader_dingo COMMAND loader_dingo "$<TARGET_FILE_DIR:dingo>")
endif()
